maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:2: error: Missing closing brace `}' assumed here
override def run() {
^ShortestPathMaze:2: error: expected start of definition
override def run() {
         ^ShortestPathMaze:31: error: Missing closing brace `}' assumed here
  k+=1
  ^